# vye-svgbob

./: Cargo.toml  README.md  pyproject.toml
examples/: example.py
src/: lib.rs  settings.rs
