[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "vye-svgbob"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
description = "Render ASCII art diagrams to SVG using the Rust crate svgbob."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["svgbob", "ascii", "svg"]

[project.urls]
Repository = "https://github.com/sattva9/vye-svgbob"

[tool.maturin]
features = ["pyo3/extension-module"]
